# vacs

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  about.toml  deny.toml  docker-compose.yml  release-please-config.json
vacs-audio/: Cargo.toml
vacs-audio/src/: backend.rs  device.rs  dsp.rs  error.rs  lib.rs  mixer.rs
vacs-audio/src/backend/: cpal.rs  mock.rs
vacs-audio/src/sources/: opus.rs
vacs-audio/src/stream/: capture.rs  playback.rs
vacs-audio/tests/: device_selector.rs  mock_stream.rs
vacs-client/: .gitignore  CHANGELOG.md  Cargo.toml  package-lock.json  package.json  tauri.conf.json  tauri.rc.conf.json  tauri.release.conf.json
vacs-client/docs/config/: README.md  client.md  client_page.md  config.schema.json
vacs-client/e2e/: package.json  seed.json  tsconfig.json  wdio.conf.ts
vacs-client/e2e/helpers/: auth.ts  browser.ts
vacs-client/e2e/specs/: login.e2e.ts
vacs-client/frontend/: oxlint.config.ts  package.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
vacs-client/frontend/src/: App.tsx  error.ts  main.tsx
vacs-client/frontend/src/components/: CallQueue.tsx  ClientPage.tsx  Clock.tsx  DirectAccessPage.tsx  FunctionKeys.tsx  Hint.tsx  InfoGrid.tsx  Tabs.tsx
vacs-client/frontend/src/components/overlays/: ErrorOverlay.tsx  UpdateOverlay.tsx
vacs-client/frontend/src/components/radio/: AddRadioStation.tsx  FrequencyObject.tsx
vacs-client/frontend/src/components/settings/: AdvancedPage.tsx  AudioHostSelector.tsx  CallConfigPage.tsx  DeviceSelector.tsx  HotkeysConfigPage.tsx  InputLevelMeter.tsx  KeyCapture.tsx  RemoteControlSettings.tsx  ReplaySettings.tsx  SettingsSubPage.tsx  TransmitModePage.tsx  TransmitModeSettings.tsx  VolumeSlider.tsx
vacs-client/frontend/src/components/telephone/: CallList.tsx  TelephoneDirectory.tsx
vacs-client/frontend/src/components/ui/: Button.tsx  ConnectionStatusIndicator.tsx  CplButton.tsx  DirectAccessClientKey.tsx  DirectAccessStationKey.tsx  List.tsx  PhoneButton.test.tsx  PhoneButton.tsx  RadioButton.tsx  RadioPrioButton.tsx  StatusIndicator.tsx
vacs-client/frontend/src/hooks/: call-state-hook.ts  click-and-hold-hook.ts  dial-pad-hook.ts  radio-state-hook.ts  station-key-interaction-hook.ts  use-direct-access-station-key.ts  zoom-hotkey-hook.ts
vacs-client/frontend/src/listeners/: auth-listener.ts  error-listener.ts  radio-listener.ts  signaling-listener.ts  webrtc-listener.ts
vacs-client/frontend/src/pages/: GeoPage.tsx  LoginPage.tsx  RadioPage.tsx  ReplayPage.tsx  SettingsPage.tsx  TelephonePage.tsx
vacs-client/frontend/src/stores/: blink-store.ts  call-list-store.ts  call-store.ts  clients-store.ts  connection-store.ts  error-overlay-store.ts  profile-store.ts  radio-store.ts  settings-store.ts  stations-store.ts
vacs-client/frontend/src/styles/: checkbox.css  frequency-object.css  main.css  volume-slider.css
vacs-client/frontend/src/transport/: hydrate.ts  index.ts  remote.ts  store-sync.ts  tauri.ts  types.ts
vacs-client/frontend/src/types/: audio.ts  client.ts  custom-button-colors.ts  profile.ts  radio.ts  replay.ts  settings.ts
vacs-client/frontend/src/utils/: call-state-colors.test.ts  call-state-colors.ts  socket-address.ts
vacs-client/frontend/test/: declarations.d.ts  matchers.ts  setup.ts  util.ts
vacs-client/frontend/test/hooks/: station-key-interaction-hook.test.ts
vacs-client/frontend/test/utils/: call-state-colors.test.ts  socket-address.test.ts
vacs-client/src/: app.rs  audio.rs  config.rs  error.rs  lib.rs  main.rs  platform.rs  radio.rs  remote.rs  replay.rs  secrets.rs
vacs-client/src/app/: commands.rs  state.rs
vacs-client/src/app/state/: audio.rs  replay.rs  signaling.rs  track_audio_radio.rs  webrtc.rs
vacs-client/src/audio/: commands.rs  manager.rs
vacs-client/src/auth/: commands.rs
vacs-client/src/keybinds/: commands.rs  engine.rs
vacs-client/src/platform/: windows_touch_handler.rs
vacs-client/src/radio/: commands.rs  track_audio.rs
vacs-client/src/remote/: commands.rs  protocol.rs  server.rs
vacs-client/src/replay/: commands.rs  fsm.rs  recorder.rs  source.rs  storage.rs  writer.rs
vacs-client/src/replay/source/: capture.rs  track_audio.rs
vacs-client/src/signaling/: commands.rs
vacs-macros/: Cargo.toml
vacs-protocol/: Cargo.toml
vacs-protocol/src/: profile.rs  vatsim.rs
vacs-protocol/src/http/: auth.rs  version.rs
vacs-protocol/src/profile/: geo.rs
vacs-protocol/src/ws/server/: network.rs
vacs-server/: CHANGELOG.md  Cargo.toml  Dockerfile
vacs-server/src/: auth.rs  config.rs  dataset.rs  ice.rs  main.rs  metrics.rs  ratelimit.rs  routes.rs  state.rs  store.rs  test_utils.rs
vacs-server/src/auth/: extractor.rs  layer.rs  users.rs
vacs-server/src/ice/: provider.rs
vacs-server/src/ice/provider/: coturn.rs
vacs-server/src/metrics/: labels.rs
vacs-server/src/release/: policy.rs
vacs-server/src/release/catalog/: file.rs  github.rs
vacs-server/src/routes/: admin.rs  assets.rs  auth.rs  debug.rs  webrtc.rs  ws.rs
vacs-server/src/state/calls/: manager.rs
vacs-server/src/state/clients/: manager.rs  session.rs
vacs-server/src/store/: memory.rs  redis.rs
vacs-server/src/test_utils/: test_app.rs  test_client.rs  test_env.rs
vacs-server/src/ws/: application_message.rs  auth.rs  test_util.rs
vacs-server/static/: auth_redirect.html  auth_redirect_error.html
vacs-server/tests/: api_token_auth.rs  auth.rs  call.rs  client.rs  test_env.rs  websocket.rs
vacs-server/tests/fixtures/scenarios/: lovv_app_self_handoff.json  lovv_bc_ctr_disconnect_and_reopen.json  self_handoff.json  shared_position_reopen.json
vacs-signaling/: Cargo.toml
vacs-signaling/src/: client.rs  error.rs
vacs-signaling/src/auth/: mock.rs
vacs-signaling/src/test_utils/: test_rig.rs
vacs-signaling/tests/: auth.rs  calls.rs
vacs-vatsim/: Cargo.toml
vacs-vatsim/src/: lib.rs
vacs-vatsim/src/coverage/: flight_information_region.rs  network.rs  position.rs  profile.rs
vacs-webrtc/: Cargo.toml
(+19 files in other folders)
