[workspace]
resolver = "3"
members = [
    "vacs-audio",
    "vacs-client",
    "vacs-macros",
    "vacs-protocol",
    "vacs-server",
    "vacs-signaling",
    "vacs-vatsim",
    "vacs-webrtc"
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vacs-project/vacs"
publish = false

[workspace.dependencies]
anyhow = "1.0.102"
# we **NEED** to keep the ashpd version and especially feature flags 100% identical to the ones rfd currently uses,
# otherwise our deep-link IPC suddenly breaks under Linux. Don't ask why. And especially don't ask how long it took to
# figure this out.
ashpd = { version = "0.11.0", default-features = false, features = ["raw_handle"] }
async-trait = "0.1.89"
audioadapter-buffers = "2.0.0"
axum = "0.8.8"
axum-client-ip = "1.3.1"
axum-login = "0.18.0"
axum-prometheus = "0.10.0"
base64 = "0.22.1"
biquad = "0.5.0"
bytes = "1.11.1"
cfg-if = "1.0.4"
chacha20poly1305 = "0.10.1"
config = "0.15.19"
cookie_store = "0.22.1"
cpal = "0.16.0"
csv = "1.4.0"
dashmap = "6.1.0"
flate2 = "1.1.9"
futures-util = "0.3.32"
governor = "0.10.4"
http = "1.4.0"
http-body-util = "0.1.3"
jsonwebtoken = "10.3.0"
keyboard-types = { version = "0.8.3", features = ["serde"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-openssl"] }
log = "0.4.29"
lru = "0.16.3"
metrics = "0.24.2"
nonzero_ext = "0.3.0"
notify-debouncer-full = "0.7.0"
objc2-core-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
oauth2 = { version = "5.0.0", default-features = false }
octocrab = "0.49.5"
opus = "0.3.1"
parking_lot = "0.12.5"
pretty_assertions = "1.4.1"
quote = "1.0.45"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["cookies", "json", "query", "rustls"] }
rfd = { version = "0.16.0", features = ["common-controls-v6"] }
ringbuf = "0.4.8"
rubato = "1.0.1"
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["full"] }
tar = "0.4.44"
tauri = "2.10.3"
tauri-build = "2.5.6"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-prevent-default = "4.0.4"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-updater = "2.10.0"
tempfile = "3.27.0"
test-log = { version = "0.2.19", features = ["trace"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "process", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls", "rustls-tls-native-roots"] }
tokio-util = "0.7.18"
toml = "1.0.6"
tower-http = "0.6.8"
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-redis-store = "0.16.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing = { version = "0.1.44", features = ["log"] }
trackaudio = "0.2.1"
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v7", "serde"] }
vacs-audio = { path = "vacs-audio" }
vacs-macros = { path = "vacs-macros" }
vacs-protocol = { path = "vacs-protocol" }
vacs-server = { path = "vacs-server" }
vacs-signaling = { path = "vacs-signaling" }
vacs-vatsim = { path = "vacs-vatsim", default-features = false }
vacs-webrtc = { path = "vacs-webrtc" }
vergen-git2 = { version = "9.1.0", features = ["build", "cargo", "rustc"] }
webrtc = "0.17.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading"
] }
wiremock = "0.6.5"

[workspace.lints.clippy]
semicolon-if-nothing-returned = "warn"
