[package]
name = "vacs-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
audioadapter-buffers = { workspace = true }
biquad = { workspace = true }
bytes = { workspace = true }
opus = { workspace = true }
parking_lot = { workspace = true }
ringbuf = { workspace = true }
rubato = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
cpal = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cpal_macos = { package = "cpal", git = "https://github.com/RustAudio/cpal", rev = "a8269d3c993f7d375d4655b53d3437429d4f6bd8" }

[lints]
workspace = true
