[package]
name = "vacs-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
audioadapter-buffers = { workspace = true }
biquad = { workspace = true }
bytes = { workspace = true }
cpal = { workspace = true }
opus = { workspace = true }
parking_lot = { workspace = true }
ringbuf = { workspace = true }
rubato = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
