[package]
name = "vacs-client"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vacs_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }
vergen-git2 = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cfg-if = { workspace = true }
chacha20poly1305 = { workspace = true }
config = { workspace = true }
cookie_store = { workspace = true }
keyboard-types = { workspace = true }
keyring = { workspace = true }
log = { workspace = true }
notify-debouncer-full = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
rfd = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-updater = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
trackaudio = { workspace = true }
url = { workspace = true }
vacs-audio = { workspace = true }
vacs-macros = { workspace = true }
vacs-signaling = { workspace = true }
vacs-webrtc = { workspace = true }
vacs-vatsim = { workspace = true, features = ["coverage"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
tauri-plugin-prevent-default = { workspace = true, features = ["platform-windows"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = { workspace = true }
objc2-core-foundation = { workspace = true }
tauri-plugin-prevent-default = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { workspace = true }
futures-util = { workspace = true }
tauri-plugin-prevent-default = { workspace = true }