[package]
name = "vacs-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
http = ["http-webrtc"]
http-webrtc = []
profile = ["vatsim"]
vatsim = []
ws = ["profile", "vatsim"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
