[package]
name = "vacs-signaling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
test-utils = ["dep:vacs-server"]

[dependencies]
async-trait = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
vacs-protocol = { workspace = true, features = ["http", "ws"] }
vacs-server = { workspace = true, features = ["test-utils"], optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["unstable"] }
test-log = { workspace = true }
vacs-server = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
