[package]
name = "vacs-webrtc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vacs-audio = { workspace = true }
vacs-protocol = { workspace = true, features = ["http-webrtc"] }
webrtc = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
